<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="gameChooser"
        android:title="@string/gameChooser">
        <ListPreference
            android:defaultValue="@string/chooserStyleDefaultValue"
            android:entries="@array/chooserStyleDescs"
            android:entryValues="@array/chooserStyles"
            android:key="chooserStyle"
            android:title="@string/chooserStyle" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="thisGame"
        android:title="@string/thisGame">
        <Preference
            android:key="arrowKeysUnavailable"
            android:selectable="false"
            android:summary="@string/arrowKeysUnavailable" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="bridgesShowH"
            android:summary="@string/bridgesShowHSummary"
            android:title="@string/bridgesShowH" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="unequalShowH"
            android:summary="@string/unequalShowHSummary"
            android:title="@string/unequalShowH" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/allGames">
        <SwitchPreference
            android:defaultValue="true"
            android:key="controlsReminders"
            android:summary="@string/controlsRemindersSummary"
            android:title="@string/controlsReminders" />
        <ListPreference
            android:defaultValue="@string/orientationModeDefaultValue"
            android:entries="@array/orientationModeDescs"
            android:entryValues="@array/orientationModes"
            android:key="orientation"
            android:title="@string/orientation" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="nightMode"
            android:summary="@string/nightModeSummary"
            android:title="@string/nightMode" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/displaySettings">
        <SwitchPreference
            android:defaultValue="true"
            android:key="completedPrompt"
            android:summary="@string/completedPromptSummary"
            android:title="@string/completedPrompt" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="fullscreen"
            android:summary="@string/fullscreenSummary"
            android:title="@string/fullscreen" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="stayAwake"
            android:summary="@string/stayAwakeSummary"
            android:title="@string/stayAwake" />
        <ListPreference
            android:defaultValue="@string/limitDpiModeDefaultValue"
            android:entries="@array/limitDpiModeDescs"
            android:entryValues="@array/limitDpiModes"
            android:key="limitDpi"
            android:title="@string/limitDpi" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/keyboardSettings">
        <SwitchPreference
            android:defaultValue="true"
            android:key="undoRedoOnKeyboard"
            android:summary="@string/undoRedoOnKeyboardSummary"
            android:title="@string/undoRedoOnKeyboard" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="keyboardBorders"
            android:summary="@string/keyboardBordersSummary"
            android:title="@string/keyboardBorders" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/mouseSettings">
        <ListPreference
            android:defaultValue="auto"
            android:entries="@array/extMouseLongPressModeDescs"
            android:entryValues="@array/extMouseLongPressModes"
            android:key="extMouseLongPress"
            android:title="@string/extMouseLongPress" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="extMouseBackKey"
            android:summary="@string/extMouseBackKeySummary"
            android:title="@string/extMouseBackKey" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/About_this_app">
        <Preference
            android:key="about_content"
            android:summary="@string/about_content"
            android:title="@string/app_info" />
        <PreferenceScreen android:title="@string/Project_website">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/website_url" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/Send_feedback">
            <intent
                android:targetClass="name.boyle.chris.sgtpuzzles.SendFeedbackActivity"
                android:targetPackage="name.boyle.chris.sgtpuzzles" />
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>