<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:supportLib="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GameChooser"
    tools:ignore="UnusedAttribute">
    <!-- showAsAction will be reset by rethinkActionBarCapacity() -->
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/Settings" />
    <item
        android:id="@+id/load"
        android:alphabeticShortcut="y"
        android:icon="@drawable/ic_action_load"
        android:title="@string/Load_"
        supportLib:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/help_menu"
        android:icon="@drawable/ic_action_help"
        android:title="@string/Help"
        supportLib:showAsAction="ifRoom|withText">
        <menu>
            <item
                android:id="@+id/contents"
                android:title="@string/Help" />
            <item
                android:id="@+id/email"
                android:title="@string/Send_feedback" />
        </menu>
    </item>
</menu>
